{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "96dd346d-05ad-457e-a21c-60232ffcbdab",
            "actions": [
                {
                    "name": "PrimaryFingerPos",
                    "type": "Value",
                    "id": "dd5bc4d0-b551-44dd-a567-07eef0360aa6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SecondaryFingerPos",
                    "type": "Value",
                    "id": "883a73f4-8a9a-4a3a-8b45-977c600fd987",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SecondaryTouchContact",
                    "type": "Button",
                    "id": "ff2d3d2d-e95a-4cdc-9ddb-a87e0c7632fa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e9da4a54-d7b9-4607-ad61-5f01f37f5d1e",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryFingerPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c501efe1-1e38-4b8a-840c-2dfad86e7da7",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryFingerPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a7fc1b7f-ab6c-472c-95a8-5204cae2ec27",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryTouchContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}